# BadXpple

./: .gitignore  CMakeLists.txt  README.md  extract_frames.sh
src/: audio.cpp  main.cpp  pixmap.cpp
